--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@
     padding: 2px;
 }
 
+a {text-decoration: none; color: steelblue;}
+
 body {
     font-family: 'Poppins', sans-serif;
 }
@@ -39,6 +41,34 @@ body {
 /* network */
 .wrap-network {
     border: 1px solid gainsboro;
+}
+
+.wrap-network .network-group {
+    display: flex;
+    /* border: 1px solid black; */
+    background-color: rgba(245, 245, 245, 0.74);
+}
+.wrap-network .network-group span {
+    /* border: 1px solid black; */
+}
+
+.wrap-network .network-group span.value {
+    width: 100%;
+    background-color: rgba(255, 166, 0, 0.712);
+    color: white;
+    margin-top: 3px;
+    padding: 0;
+    height: 25px;
+}
+
+.wrap-network .network-group span.value .pers {
+    width: 40%;
+    height: 100%;
+    background-color: orange;
+    margin: 0;
+    /* padding: 6px; */
+    padding-left: 10px;
+    font-size: 14px;
 }
 
 .wrap-coding {
@@ -169,6 +199,12 @@ body {
     letter-spacing: 1px;
 }
 
+.wrap-name span {
+    text-transform: capitalize;
+    font-size: 12px;
+    color: rgb(90, 87, 87);
+}
+
 /* wrap master */
 .wrap-master {
     padding: 6px;
@@ -235,6 +271,30 @@ body {
 .wrap-kontak .group-kontak span.value {
     padding-top: 4px;
     /* font-weight: bold; */
+    letter-spacing: 1px;
+}
+
+/* medsos */
+.wrap-medsos .group-medsos {
+    display: flex;
+    /* border: 1px solid gainsboro; */
+}
+
+.wrap-medsos .group-medsos span {
+    /* border: 1px solid gainsboro; */
+    font-size: 14px;
+    font-style: italic;
+    margin: 0;
+    padding: 0;
+}
+
+.wrap-medsos .group-medsos span.value {
+    padding-top: 3px;
+}
+
+.wrap-medsos .group-medsos span.value a {
+    color: black;
+    font-weight: bold;
 }
 
 /* bahasa */
